# poker_ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-snap.yml  ci.yml
docs/: README.md  data-and-sqlite.md  improvements.md
notebooks/: hand_history_exploration.ipynb
poker/qml/: Main.qml  application.qrc
poker/qml/PokerUi/: qmldir
poker/qml/Theme/: Theme.qml  qmldir
poker/qml/assets/cards/: get_cards_svgs.sh
poker/qml/assets/training/: preflop_ranges_v1.json  spots_river_v1.json  spots_turn_v1.json  spots_v1.json
poker/qml/components/: BotNames.qml  BrandedBackground.qml  Card.qml  GameButton.qml  GameControls.qml  Player.qml  RangeGrid.qml  ResetButton.qml  SizingPresetBar.qml  Table.qml  TableBoardCard.qml  TableFelt.qml  ThemedCheckBox.qml  ThemedPanel.qml  ThemedSpinBox.qml  ThemedSwitch.qml
poker/qml/screens/: FlopTrainer.qml  GameScreen.qml  HandHistoryScreen.qml  LobbyScreen.qml  PreflopTrainer.qml  RangeViewer.qml  RiverTrainer.qml  SetupScreen.qml  SolverScreen.qml  StatsScreen.qml  TrainerHome.qml  TurnTrainer.qml
poker/qml/theme/: Fonts.qml  Metrics.qml
src/texasholdemgym/: app.py  parquet_export.py  qt_resources.py  test_runner.py
src/texasholdemgym/backend/: __init__.py  bot_strategy.py  game_screen_sync.py  game_state_persist.py  game_table.py  hand_accounting.py  hand_history.py  hand_log_payload.py  live_hand.py  nlh_table_engine.py  poker_game.py  poker_solver.py  range_manager.py  range_notation.py  session_stats.py  session_store.py  sqlite_store.py  street_bet_controller.py  table_bot.py  table_hud_text.py  toy_nash_solver.py  training.py
src/texasholdemgym/backend/poker_core/: __init__.py  betting_navigation.py  blind_positions.py  board_deal.py  cards.py  hand_action_log.py  hand_evaluation.py  hand_pot.py  hole_grid.py  pot.py  protocols.py  raise_rules.py  showdown_text.py  table_roster.py
tests/: conftest.py  test_app_paths.py  test_backend_smoke.py  test_bot_strategy.py  test_game_screen_sync.py  test_game_state_persist.py  test_game_table.py  test_hand_accounting.py  test_hand_history.py  test_hand_log_payload.py  test_imports.py  test_live_hand.py  test_nlh_table_engine.py  test_parquet_export.py  test_poker_checkdown_postflop.py  test_poker_core_betting_navigation.py  test_poker_core_blind_positions.py  test_poker_core_board_deal.py  test_poker_core_cards.py  test_poker_core_hand_action_log.py  test_poker_core_hand_evaluation.py  test_poker_core_hand_pot.py  test_poker_core_hole_grid.py  test_poker_core_pot.py  test_poker_core_raise_rules.py  test_poker_core_showdown_text.py  test_poker_core_table_roster.py  test_poker_engine_expectations.py  test_poker_game.py  test_qml_integration.py  test_qt_resources_helpers.py  test_range_manager.py  test_range_notation.py  test_session_stats.py  test_session_store.py  test_sqlite_store.py  test_street_bet_controller.py  test_table_bot.py  test_training_trainer.py
